deploy/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: modelgovernor
  labels:
    app.kubernetes.io/part-of: modelgovernor
